--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Feed" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Camera" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="About" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="camera"></ion-tab>
+  <ion-tab [root]="tab4Root" tabIcon="ios-heart-outline"></ion-tab>
+  <ion-tab [root]="tab5Root" tabIcon="ios-person-outline"></ion-tab>
 </ion-tabs>
