--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -1,15 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Camera
+      Take a picture
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <button ion-button block color="light" (click)="makePicture()">
-    Make Picture
+    Take a Picture
   </button>
   {{ imageData }}
-  <img [src]="base64Image" *ngIf="base64Image" />
 </ion-content>
