--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,5 +3,5 @@
   <ion-tab [root]="tab2Root" tabIcon="search"></ion-tab>
   <ion-tab [root]="tab3Root" tabIcon="camera"></ion-tab>
   <ion-tab [root]="tab4Root" tabIcon="ios-heart-outline"></ion-tab>
-  <ion-tab [root]="tab5Root" tabIcon="ios-person-outline"></ion-tab>
+  <ion-tab (click)="logout()" tabIcon="ios-person-outline"></ion-tab>
 </ion-tabs>
